force-app/main/default/objects/User/fields/A_C_REG__c.field-meta.xml
<CustomField>
    <fullName>A_C_REG__c</fullName>
    <label>A/C REG</label>
    <type>TextArea</type>
</CustomField>