force-app/main/default/objects/User/fields/A_C_Type__c.field-meta.xml
<CustomField>
    <fullName>A_C_Type__c</fullName>
    <label>A/C Type</label>
    <type>TextArea</type>
</CustomField>