force-app/main/default/objects/User/fields/Authorized_Department_EN__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Department_EN__c</fullName>
    <label>Authorized Department EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>