force-app/main/default/objects/User/fields/Authorized_Department_TH__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Department_TH__c</fullName>
    <label>Authorized Department TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>