force-app/main/default/objects/User/fields/Authorized_Position_EN__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Position_EN__c</fullName>
    <label>Authorized Position EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>