force-app/main/default/objects/User/fields/Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Federation_ID__c</fullName>
    <description>for Crew Mapping Upload</description>
    <externalId>true</externalId>
    <inlineHelpText>for Crew Mapping Upload</inlineHelpText>
    <label>Federation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>