force-app/main/default/objects/User/fields/Flight_Schedule_Previous_Hour__c.field-meta.xml
<CustomField>
    <fullName>Flight_Schedule_Previous_Hour__c</fullName>
    <label>Flight Schedule Previous Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>