force-app/main/default/objects/User/fields/Name_TH__c.field-meta.xml
<CustomField>
    <fullName>Name_TH__c</fullName>
    <label>Name TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>