force-app/main/default/objects/User/fields/Refresh_Interval__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Interval__c</fullName>
    <label>Refresh Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>