force-app/main/default/objects/User/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <defaultValue>"BKK"</defaultValue>
    <label>Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>