force-app/main/default/objects/User/listViews/Aircraft_Maintenance.listView-meta.xml
<ListView>
    <fullName>Aircraft_Maintenance</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>LOCALE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>DT</value>
    </filters>
    <label>Aircraft Maintenance</label>
    <language>en_US</language>
</ListView>