force-app/main/default/objects/User/listViews/AllUATUsers.listView-meta.xml
<ListView>
    <fullName>AllUATUsers</fullName>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>startsWith</operation>
        <value>uat</value>
    </filters>
    <label>All UAT Users</label>
    <language>en_US</language>
</ListView>