force-app/main/default/objects/User/listViews/CFMS_Abroad.listView-meta.xml
<ListView>
    <fullName>CFMS_Abroad</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>SR</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>SR</value>
    </filters>
    <label>CFMS Abroad</label>
    <language>en_US</language>
</ListView>