force-app/main/default/objects/User/listViews/Customer_Feedback_Chief.listView-meta.xml
<ListView>
    <fullName>Customer_Feedback_Chief</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Station__c</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>LOCALE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>ST,D7,AO,S4,S3,SZR</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>Chief</value>
    </filters>
    <label>Customer Feedback - Chief</label>
    <language>en_US</language>
</ListView>