force-app/main/default/objects/User/listViews/Ground_Customer_Service.listView-meta.xml
<ListView>
    <fullName>Ground_Customer_Service</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>MANAGER</columns>
    <columns>LOCALE</columns>
    <columns>Station__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>startsWith</operation>
        <value>CSBKKKO</value>
    </filters>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>startsWith</operation>
        <value>CSBKKKK</value>
    </filters>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>startsWith</operation>
        <value>CSBKKKW</value>
    </filters>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>startsWith</operation>
        <value>CSBKKLL</value>
    </filters>
    <filters>
        <field>CORE.USERS.SAML_SUBJECT</field>
        <operation>startsWith</operation>
        <value>CSBKKLP</value>
    </filters>
    <label>Ground Customer Service</label>
    <language>en_US</language>
</ListView>