force-app/main/default/objects/User/listViews/In_Flight_Users.listView-meta.xml
<ListView>
    <fullName>In_Flight_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>startsWith</operation>
        <value>Air</value>
    </filters>
    <label>In-Flight Users</label>
    <language>en_US</language>
</ListView>