force-app/main/default/objects/User/listViews/SZR.listView-meta.xml
<ListView>
    <fullName>SZR</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Station__c</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>LOCALE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>SZR</value>
    </filters>
    <label>SZR</label>
    <language>en_US</language>
</ListView>